# rust-pangenome

./: Cargo.toml  README.md
sample-files/: cds-negative.fasta  cds-positive.fasta  cds.fasta  mRNA.fasta
src/: args.rs  main.rs
