[package]
name = "rust-pangenome"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "LICENSE"
description = "processing metagenome-genome-pangenome annotation"
homepage = "https://github.com/applicativesystem/rust-pangenome"
repository = "https://github.com/applicativesystem/rust-pangenome"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
